# Autoria-Py-Cpp

./: .gitignore  FEATURES.md  README.md  docker-compose.yml  postman_collection.json
backend/: CMakeLists.txt  Dockerfile
backend/data/: autoria.db
backend/src/: main.cpp
backend/src/api/: ApiServer.cpp  ApiServer.cpp.bak  ApiServer.cpp.bak2  ApiServer.h
backend/src/database/: Database.cpp  Database.h
backend/src/middleware/: AuthMiddleware.cpp  AuthMiddleware.h
backend/src/models/: Brand.cpp  Brand.h  Listing.cpp  Listing.h  Role.cpp  Role.h  User.cpp  User.h
backend/src/repositories/: BrandRepository.cpp  BrandRepository.h  ListingRepository.cpp  ListingRepository.h  UserRepository.cpp  UserRepository.h
backend/src/services/: CurrencyService.cpp  CurrencyService.h  ModerationService.cpp  ModerationService.h  StatisticsService.cpp  StatisticsService.h
frontend/: Dockerfile  app.py  requirements.txt
frontend/templates/: create_listing.html  edit_listing.html  favorites.html  index.html  listing_details.html  login.html  messages.html  my_listings.html  notifications.html  profile.html  register.html  seller_stats.html
